# rag_agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PROJECT_BRIEF.md  README.md  config.toml  docker-compose.yml  pyproject.toml
examples/: run_agent.py
frontend/: index.html
src/rag_agent/: __init__.py  __main__.py  main.py
src/rag_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rag_agent/agent/: orchestrator.py
src/rag_agent/agents/: __init__.py  main_agent.py
src/rag_agent/api/: router.py
src/rag_agent/api/routes/: chat.py  dependencies.py  documents.py  rag.py
src/rag_agent/core/: config.py  observability.py
src/rag_agent/domain/: schemas.py
src/rag_agent/guardrails/: guardrails.py
src/rag_agent/guardrails/nemo_guardrails/: config.yml  rails_output_leaks.co  rails_output_safety.co  rails_test_garak.co
src/rag_agent/rag/: chunking.py  retriever.py
src/rag_agent/security/: hitl.py  permissions.py
src/rag_agent/services/: document_errors.py  document_ingestion_service.py  ingestion_service.py  llm_service.py  rag_service.py  retrieval_service.py
src/rag_agent/storage/: document_store.py  errors.py  vector_store.py
src/rag_agent/tools/: base.py  dangerous_tools.py  langchain_adapter.py  rag_tool.py  registry.py
tests/: test_agent_full.py  test_agent_minimal.py  test_api_errors.py  test_chunking.py  test_config.py  test_document_ingestion_service.py  test_document_upload_api.py  test_ollama_client.py  test_rag_service.py  test_retrieval_service.py  test_vector_store.py
(+3 files in other folders)
