[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-agent"
version = "0.1.0"
description = "Minimal backend service for agent and RAG with Ollama integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nemoguardrails",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "tomli",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langgraph",
    "langsmith",           # для отладки (опционально)
    "httpx",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
